Fix: adjust send button color in dark mode

--- a/front-end/src/components/Main/Main.css
+++ b/front-end/src/components/Main/Main.css
@@ -30,7 +30,8 @@
     --main-bottom-info-color: #bdc1c6;
 }
 
-.dark .card-image img {
+.dark .card-image img,
+.dark .search-box img {
     filter: invert(100%);
 }
 
